include/rthw.h

struct rt_spinlock
{
    rt_hw_spinlock_t lock;
};
typedef rt_base_t rt_spinlock_t;
struct rt_spinlock
{
    rt_spinlock_t lock;
};