blue/bsp/src/bindings.rs

#[test]
fn bindgen_test_layout_rt_list_node() {
    const UNINIT: ::core::mem::MaybeUninit<rt_list_node> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_list_node>(),
        8usize,
        concat!("Size of: ", stringify!(rt_list_node))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_list_node>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_list_node))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_list_node),
            "::",
            stringify!(next)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).prev) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_list_node),
            "::",
            stringify!(prev)
        )
    );
}
#[doc = " Double List structure"]
pub type rt_list_t = rt_list_node;
#[doc = " Single List structure"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_slist_node {
    #[doc = "< point to next node."]
    pub next: *mut rt_slist_node,
}
#[test]
fn bindgen_test_layout_rt_slist_node() {
    const UNINIT: ::core::mem::MaybeUninit<rt_slist_node> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_slist_node>(),
        4usize,
        concat!("Size of: ", stringify!(rt_slist_node))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_slist_node>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_slist_node))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).next) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_slist_node),
            "::",
            stringify!(next)
        )
    );
}
#[doc = " Single List structure"]
pub type rt_slist_t = rt_slist_node;
pub type TimeoutFn = ::core::option::Option<unsafe extern "C" fn(arg1: *mut core::ffi::c_void)>;
#[doc = "< The object is not used."]
pub const rt_object_class_type_RT_Object_Class_Null: rt_object_class_type = 0;
#[doc = "< The object is a process."]
pub const rt_object_class_type_RT_Object_Class_Process: rt_object_class_type = 1;
#[doc = "< The object is a thread."]
pub const rt_object_class_type_RT_Object_Class_Thread: rt_object_class_type = 2;
#[doc = "< The object is a semaphore."]
pub const rt_object_class_type_RT_Object_Class_Semaphore: rt_object_class_type = 3;
#[doc = "< The object is a mutex."]
pub const rt_object_class_type_RT_Object_Class_Mutex: rt_object_class_type = 4;
#[doc = "< The object is a event."]
pub const rt_object_class_type_RT_Object_Class_Event: rt_object_class_type = 5;
#[doc = "< The object is a mail box."]
pub const rt_object_class_type_RT_Object_Class_MailBox: rt_object_class_type = 6;
#[doc = "< The object is a message queue."]
pub const rt_object_class_type_RT_Object_Class_MessageQueue: rt_object_class_type = 7;
#[doc = "< The object is a device."]
pub const rt_object_class_type_RT_Object_Class_Device: rt_object_class_type = 8;
#[doc = "< The object is a timer."]
pub const rt_object_class_type_RT_Object_Class_Timer: rt_object_class_type = 9;
#[doc = "< The object is a memory."]
pub const rt_object_class_type_RT_Object_Class_Memory: rt_object_class_type = 10;
#[doc = "< The object is a custom object"]
pub const rt_object_class_type_RT_Object_Class_Custom: rt_object_class_type = 11;
#[doc = "< The object is unknown."]
pub const rt_object_class_type_RT_Object_Class_Unknown: rt_object_class_type = 12;
pub type rt_object_class_type = core::ffi::c_uchar;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_spinlock {
    pub lock: rt_size_t,
}
#[test]
fn bindgen_test_layout_rt_spinlock() {
    const UNINIT: ::core::mem::MaybeUninit<rt_spinlock> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_spinlock>(),
        4usize,
        concat!("Size of: ", stringify!(rt_spinlock))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_spinlock>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_spinlock))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).lock) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_spinlock),
            "::",
            stringify!(lock)
        )
    );
}
pub const ObjectClassType_ObjectClassUninit: ObjectClassType = 0;
pub const ObjectClassType_ObjectClassProcess: ObjectClassType = 1;
pub const ObjectClassType_ObjectClassThread: ObjectClassType = 2;
pub const ObjectClassType_ObjectClassSemaphore: ObjectClassType = 3;
pub const ObjectClassType_ObjectClassMutex: ObjectClassType = 4;
pub const ObjectClassType_ObjectClassCondVar: ObjectClassType = 5;
pub const ObjectClassType_ObjectClassRwLock: ObjectClassType = 6;
pub const ObjectClassType_ObjectClassEvent: ObjectClassType = 7;
pub const ObjectClassType_ObjectClassMailBox: ObjectClassType = 8;
pub const ObjectClassType_ObjectClassMessageQueue: ObjectClassType = 9;
pub const ObjectClassType_ObjectClassMemHeap: ObjectClassType = 10;
pub const ObjectClassType_ObjectClassMemPool: ObjectClassType = 11;
pub const ObjectClassType_ObjectClassDevice: ObjectClassType = 12;
pub const ObjectClassType_ObjectClassTimer: ObjectClassType = 13;
pub const ObjectClassType_ObjectClassMemory: ObjectClassType = 14;
pub const ObjectClassType_ObjectClassUnknown: ObjectClassType = 15;
pub type ObjectClassType = rt_uint8_t;
pub type IdleHookFn = ::core::option::Option<unsafe extern "C" fn()>;
#[doc = " Base kernel Object"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rt_object {
    #[doc = " TODO: change type to String\n name of kernel object"]
    pub name: [rt_int8_t; 8usize],
    #[doc = " type of kernel object"]
    pub type_: rt_uint8_t,
    #[doc = " list node of kernel object"]
    pub list: rt_list_t,
}
#[test]
fn bindgen_test_layout_rt_object() {
    const UNINIT: ::core::mem::MaybeUninit<rt_object> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<rt_object>(),
        20usize,
        concat!("Size of: ", stringify!(rt_object))
    );
    assert_eq!(
        ::core::mem::align_of::<rt_object>(),
        4usize,
        concat!("Alignment of ", stringify!(rt_object))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).type_) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object),
            "::",
            stringify!(type_)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).list) as usize - ptr as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(rt_object),
            "::",
            stringify!(list)
        )
    );
}
#[doc = " WaitQueue for pending threads"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WaitQueue {
    #[doc = " WaitQueue impl by ListHead"]
    pub working_queue: rt_list_t,
    #[doc = " WaitQueue working mode, FIFO or PRIO"]
    pub waiting_mode: rt_uint32_t,
}
#[test]
fn bindgen_test_layout_WaitQueue() {
    const UNINIT: ::core::mem::MaybeUninit<WaitQueue> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<WaitQueue>(),
        12usize,
        concat!("Size of: ", stringify!(WaitQueue))
    );
    assert_eq!(
        ::core::mem::align_of::<WaitQueue>(),
        4usize,
        concat!("Alignment of ", stringify!(WaitQueue))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).working_queue) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(WaitQueue),
            "::",
            stringify!(working_queue)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).waiting_mode) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(WaitQueue),
            "::",
            stringify!(waiting_mode)
        )
    );
}
#[doc = " System queue for kernel use on IPC"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SysQueue {
    #[doc = " Queue item size"]
    pub item_size: rt_size_t,
    #[doc = " Queue item max count"]
    pub item_max_count: rt_size_t,
    #[doc = " Count of items in queue"]
    pub item_in_queue: rt_size_t,
    #[doc = " Queue raw buffer pointer"]
    pub queue_buf: *mut rt_uint8_t,
    #[doc = " Queue memory size"]
    pub queue_buf_size: rt_size_t,
    #[doc = " If the queue buffer from external, this will be true"]
    pub is_storage_from_external: rt_bool_t,
    #[doc = " Ringbuffer read position"]
    pub read_pos: rt_size_t,
    #[doc = " Ringbuffer write position"]
    pub write_pos: rt_size_t,
    #[doc = " Queue head pointer"]
    pub head: *mut rt_uint8_t,
    #[doc = " Queue tail pointer"]
    pub tail: *mut rt_uint8_t,
    #[doc = " Pointer to first 'free to use' item in queue"]
    pub free: *mut rt_uint8_t,
    #[doc = " Queue working mode: FIFO by default"]
    pub working_mode: rt_uint32_t,
    #[doc = " Queue for waiting to enqueue items in the working sysqueue"]
    pub enqueue_waiter: WaitQueue,
    #[doc = " Queue for waiting to dequeue items in the working sysqueue"]
    pub dequeue_waiter: WaitQueue,
    #[doc = " Spin lock for sysqueue"]
    pub spinlock: rt_spinlock,
}
